# agentation-py

./: .gitignore  CLAUDE.md  PLAN-Agentation-Python.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: fastapi-guide.md  flask-guide.md
docs/plans/: 2026-01-22-agentation-py-design.md  2026-01-22-agentation-py-implementation.md
examples/fastapi_app/: main.py
examples/fastapi_app/templates/: index.html
examples/flask_app/: app.py
examples/flask_app/templates/: about.html  index.html
src/agentation/: __init__.py  assets.py  config.py  injector.py
src/agentation/adapters/: __init__.py  fastapi.py  flask.py
src/agentation/static/: __init__.py  agentation.min.js
src/js/: annotations.js  element-identification.js  icons.js  index.js  keyboard.js  output-formatter.js  popup.js  selector-engine.js  storage.js  styles.js  toolbar.js
tests/: test_assets.py  test_config.py  test_fastapi.py  test_flask.py  test_injector.py
