[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentation"
version = "0.1.0"
description = "Visual feedback tool for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Paulo Matos", email = "pmatos@linki.tools" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
keywords = ["ai", "coding", "agents", "debugging", "flask", "fastapi"]

dependencies = []

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "pyright>=1.1",
    "flask>=2.0",
    "fastapi>=0.100",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/pmatos/agentation-py"
Repository = "https://github.com/pmatos/agentation-py"
Issues = "https://github.com/pmatos/agentation-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentation"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
